<resources>
    <string name="action_settings">Settings</string>
    <string name="logging_out">Signing out</string>
    <string name="garage">Garage</string>
    <string name="statistics">Statistics</string>
    <string name="save_me">Save me!</string>
    <string name="ranking">Ranking</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="about_us">About us</string>
    <string name="internal_firebase_login_error">Internal error. Retry later.</string>
    <string name="user_item">User</string>
    <string name="point_item">Points</string>
    <string name="rank_item">Rank</string>
    <string name="canceled_action">Canceled action.</string>
    <string name="twitter_auth_fail">Error while signing in with Twitter.</string>
    <string name="level_selection">Level selection</string>
    <string name="refresh_list">Refresh list</string>
    <string name="empty_user">There are no user.</string>
    <string name="refresh_complete">Updated list.</string>
    <string name="dialogue_level_menu">Select the search area.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="level_nation">Nation</string>
    <string name="level_region">Region</string>
    <string name="level_district">District</string>
    <string name="unable_load_ranking">Failed to load ranking.</string>
    <string name="session_expired">Session expired. Re-login.</string>
    <string name="level_unavailable">Unavailable users</string>
    <string name="level_available">All available users</string>
    <string name="level_all">All users</string>
    <string name="level_empty_list">No users found</string>
    <string name="invalid_position">Invalid position.</string>
    <string name="position_not_found">Position not found</string>
    <string name="bad_query_unknown_position">Your position can not be determined: the filter was set to %s</string>
    <string name="filter_unavailable">unavailable</string>
    <string name="availability">Availability</string>
    <string name="gps_ask_enable">Please enable GPS</string>
    <string name="detail_user">User details</string>
    <string name="suspend_location_update">Location updates</string>
    <string name="filter_not_traceable">Not traceable</string>
    <string name="level_not_traceable">Not traceable users</string>
    <string name="bad_system_clock">Wrong system clock: Update it for more accurate results</string>
    <string name="no_internet_connection">No internet connection detected!</string>
    <string name="points">Points</string>
    <string name="days">Days</string>
    <string name="user_points_title">Earned points</string>
    <string name="data_unavailable">Unavailable data</string>
    <string name="message">ATTENTION!</string>
    <string name="dont_worry">Do not worry</string>
    <string name="insert_info">Please enter all required information. If you do not exactly remember something you can add what you remember and change them later.</string>
    <string name="not_show_again">do not show again</string>
    <string name="empty_garage">Your garage is empty</string>
    <string name="insurance_alert">Your insurance is exipired! Please update your insurance expiration date as soon as you renew it</string>
    <string name="general_alert">Check marking vehicles with red exclamation mark, may have the insurance expired, please check the vehicle!</string>
    <string name="review_alert">Check marking vehicles with blue exclamation mark, you have done last review at least two years ago, please check the vehicle!</string>
    <string name="plate_number">Plate number</string>
    <string name="owner">Owner</string>
    <string name="tires_cond">Tires condition</string>
    <string name="battery">Battery status</string>
    <string name="add">CONFIRM</string>
    <string name="model">Model</string>
    <string name="Moto">Moto</string>
    <string name="Car">Car</string>
    <string name="type">Vehicle Type</string>
    <string name="Van">Van</string>
    <string name="insurance_date">Insurance date</string>
    <string name="revision_date">Revision date</string>
    <string name="fragment_tag" translatable="false">fragment</string>
    <string name="field_required">Required.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="acceleration">Acceleration</string>
    <string name="velocity">Velocity</string>
    <string name="feedback">Feedback</string>
    <string name="last_update">Last update</string>
    <string name="not_determinated">N.D.</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="change_profile_data">Change profile data</string>
    <string name="change_password">Change password</string>
    <string name="new_username">New username</string>
    <string name="identical_username">Identical username</string>
    <string name="edit_profile">Edit profile</string>
    <string name="username_updated">Username updated</string>
    <string name="choose_new_profile_picture">Choose new image picture</string>
    <string name="profile_picture_updated">Profile picture updated</string>
    <string name="profile_picture_not_updated">Error while updating profile picture</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_password_2">Repeat new password</string>
    <string name="bad_old_psw">Old password is wrong</string>
    <string name="bad_new_psw">The new password not correspond</string>
    <string name="psw_updated">Password updated</string>
    <string name="psw_not_updated">Password not updated</string>
    <string name="bad_psw_change_must_logout">You could only change password associated with this app!</string>
    <string name="new_email">New email address</string>
    <string name="email_not_updated">Error while updating email address</string>
    <string name="email_updated">Email address updated</string>
    <string name="internal_firebase_error_login">Sorry! Internal Firebase error login occurred!</string>
    <string name="repeat_password">Repeat password</string>
    <string name="loading_location">Loading your position…</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="restart_device">Please restart your device</string>
    <string name="user_not_traceable">You can not contact this user</string>
    <string name="cannot_contact_user">You can not contact this user</string>
    <string name="vel_mu">mi/h</string>
    <string name="acc_mu">m/s^2</string>
    <string name="hour_mu">h</string>
    <string name="points_mu">points</string>
    <string name="unknown">Unknwon</string>
    <string name="velocity_graph">Velocity graph</string>
    <string name="acceleration_graph">Acceleration graph</string>
    <string name="points_graph">Points graph</string>
    <string name="feedback_graph">Feedback graph</string>
    <string name="error">Error</string>
    <string name="velocity_daily_graph">Daily average speed chart</string>
    <string name="acceleration_daily_graph">Daily average acceleration chart</string>
    <string name="velocity_weekly_graph">Weekly average speed chart</string>
    <string name="acceleration_weekly_graph">Weekly average acceleration chart</string>
    <string name="updated_graph">Graph updated</string>
    <string name="date">Date</string>
    <string name="feedback_scale">from 1 to 5</string>
    <string name="updating_graph_data">Updating data...</string>
    <string name="Add_vehicle">Add new vehicle</string>
    <string name="chose_vehicle">Chose vehicle type</string>
    <string name="Modify_vehicle">Modify your vehicle</string>
    <string name="last_revision_date">Last Revision Date</string>
    <string name="insurance_expiration_date">Insurance expiration date</string>
    <string name="empty_friends">No Friends Selected</string>
    <string name="friends_list">SELECT YOUR FAVORITE CONTACTS</string>
    <string name="help_request">Help! I\'ve met with an accident at </string>
    <string name="nearby_hospitals">Nearby hospitals here </string>
    <string name="crash_detected">A car accident was detected, please press central button to avoid sending help requests</string>
    <string name="team_name" translatable="false">Pro Evolution Software</string>
    <string name="accept_permissions">You must accept the following permission to continue</string>
    <string name="acceleration_alert">You are accelerating too much, try to slow down</string>
    <string name="braking_alert">Please, avoid making abrupt brakes</string>
    <string name="general_speed_alert">You are going too fast, please slow down</string>
    <string name="speed_alert">You are going too fast, the speed limit is </string>
    <string name="kmh">Kilometer per hour</string>
    <string name="no_friends_alert">You don\'t have any trusted friends selected</string>
    <string name="sms_sent">Emergency SMS Sent!</string>
    <string name="press_emergency_button">PRESS THE BUTTON IF YOU DON\'T NEED HELP</string>
    <string name="terms_conditions">Terms and conditions</string>
    <string name="accept_terms">You must accept terms to continue!</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="terms">Terms</string>
    <string name="terms_text">Drive \'Em Better requires access to your location and contacts in the address book. Such data will only be processed for the purposes of the application without being disclosed or shared.</string>
    <string name="dev_description">We are a team of the University of Rome Tor Vergata so composed: Alfredo Milani, Mattia Ponza, Matteo Adriani and Fabiana Rossi.</string>
    <string name="app_name" translatable="false">Drive \'em Better</string>
    <string name="title_activity_save_me">Save Me!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="type_a_message">Type a message...</string>
    <string name="location_loading">Loading your position..</string>
    <string name="loading">Loading...</string>
    <string name="range">Range</string>
    <string name="please_wait">Please wait...</string>
    <string name="invalid_provider_type">Invalid type: %d.</string>
    <string name="username_email">Username or email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>
    <string name="hint_create_account">You have not an account yet? Create now!</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="back">Back</string>
    <string name="invalid_user">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="invalid_credentials">The password is invalid or the singletonUser does not have a password.</string>
    <string name="verification_email_success">Verification email successfully sent. Check your email and login in as %s.</string>
    <string name="verification_email_failure">Verification email not sent due an error. Retry later.</string>
    <string name="email_not_verified">Email not yet verified. Check you email address and follow the link to activate your account.</string>
    <string name="sign_in_as">Signed in as: %s.</string>
    <string name="bad_formatted_email">The email address is badly formatted.</string>
    <string name="resend_verification_email">Verification email not yet received? Resend now.</string>
    <string name="logout">Logout</string>
</resources>