<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/garage"
            android:icon="@drawable/garage_icon"
            android:title="@string/garage" />

        <item
            android:id="@+id/statistics"
            android:icon="@drawable/statistics_icon"
            android:title="@string/statistics" />

        <item
            android:id="@+id/ranking"
            android:icon="@drawable/ranking_icon"
            android:title="@string/ranking" />

        <item
            android:id="@+id/save_me"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/save_me"/>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />

            <item
                android:id="@+id/about_us"
                android:icon="@drawable/about_us_icon"
                android:title="@string/about_us"
                />
        </menu>
    </item>

    <item android:title="@string/logout">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/logout_icon"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
