<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up">

    <EditText
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textAutoCorrect"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_field"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_field"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/password_field2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_field"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:textColorHint="#ffffff" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Base.AlertDialog.AppCompat.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/welcome"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_above="@+id/resend_email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/buttonshape"
        android:text="@string/sign_up"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorLink="@android:color/background_light" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_up_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:background="@null"
        app:srcCompat="@drawable/ic_keyboard_arrow_left_white_48dp"
        android:contentDescription="@string/back" />

    <Button
        android:id="@+id/resend_email"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:alpha=".8"
        android:background="@drawable/buttonshape"
        android:text="@string/resend_verification_email"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="12sp" />

</RelativeLayout>