<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/terms_conditions"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/declineButton"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/termsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/terms_text" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/declineButton"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/button_boarder_on_white"
        android:text="@string/decline" />

    <Button
        android:id="@+id/acceptButton"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:background="@drawable/button_boarder_on_white"
        android:text="@string/accept" />
</RelativeLayout>