<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    android:paddingTop="@dimen/activity_vertical_margin"
    app:theme="@style/Theme.AppCompat.Light.DarkActionBar">

    <com.github.mikephil.charting.charts.ScatterChart
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="406dp" />

    <RadioGroup
        android:id="@+id/radioGroupParameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view">

        <RadioButton
            android:id="@+id/radio_velocity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/view"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/velocity" />

        <RadioButton
            android:id="@+id/radio_acceleration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/acceleration" />
    </RadioGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp"
        android:layout_toEndOf="@+id/radioGroupParameter"
        android:layout_toRightOf="@+id/radioGroupParameter">

        <RadioButton
            android:id="@+id/radio_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="onRadioButtonClickedTime"
            android:text="@string/week" />

        <RadioButton
            android:id="@+id/radio_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClickedTime"
            android:text="@string/day" />
    </RadioGroup>

</RelativeLayout>