<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/costraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.proevolutionsoftware.driveembetter.boundary.activity.AddVehicleActivity">

    <RelativeLayout
        android:id="@+id/alert"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:defaultFocusHighlightEnabled="false"
            android:text="@string/chose_vehicle"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            tools:text="@string/chose_vehicle" />

        <RadioGroup
            android:id="@+id/radiotype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView8"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp">

            <RadioButton
                android:id="@+id/moto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Moto"
                android:textColor="@color/black"
                android:theme="@style/RadioButtonStyle" />


            <RadioButton
                android:id="@+id/car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/radiotype"
                android:layout_marginRight="5dp"
                android:layout_toStartOf="@+id/radiotype"
                android:layout_weight="1"
                android:text="@string/Car"
                android:textColor="@color/black"
                android:theme="@style/RadioButtonStyle" />

            <RadioButton
                android:id="@+id/van"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/radiotype"
                android:layout_toEndOf="@+id/radiotype"
                android:text="@string/Van"
                android:textColor="@color/black"
                android:theme="@style/RadioButtonStyle" />


        </RadioGroup>

        <EditText
            android:id="@+id/newplatenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radiotype"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/plate_number"
            android:inputType="textPersonName"
            android:theme="@style/EditTextTheme" />

        <EditText
            android:id="@+id/newowner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/newplatenumber"
            android:layout_below="@+id/newplatenumber"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/owner"
            android:inputType="textPersonName"
            android:theme="@style/EditTextTheme" />

        <EditText
            android:id="@+id/newmodel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/newowner"
            android:layout_alignStart="@+id/newowner"
            android:layout_below="@+id/newowner"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/model"
            android:inputType="textPersonName"
            android:theme="@style/EditTextTheme" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/rev"
            android:layout_alignStart="@+id/rev"
            android:layout_below="@+id/rev"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/insurance_date_plain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/newmodel"
            android:layout_alignStart="@+id/newmodel"
            android:layout_below="@+id/newmodel"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:hint="Insurance expiration date"
            android:inputType="date"
            android:theme="@style/EditTextTheme" />

        <EditText
            android:id="@+id/rev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/insurance_date_plain"
            android:layout_alignStart="@+id/insurance_date_plain"
            android:layout_below="@+id/insurance_date_plain"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:hint="Last revision date"
            android:inputType="date"
            android:theme="@style/EditTextTheme" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
