<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:layout_weight="0.21"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dont_worry"
            android:textColor="@color/amber_900"
            android:textSize="25sp"
            android:textStyle="italic"
            tools:text="@string/dont_worry" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/insert_info"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/show_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/not_show_again"
            android:textColor="@color/amber_900" />

        <Button
            android:id="@+id/ok_worry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@android:string/ok"
            android:textColorLink="#dfe2e2" />

    </LinearLayout>
</LinearLayout>